Edited wiki page BeanSoup through web user interface.

--- a/wiki/BeanSoup.wiki
+++ b/wiki/BeanSoup.wiki
@@ -2,4 +2,4 @@
 
 = Introduction =
 
-Welcome to the !BeanSoup sub project within soafaces. !BeanSoup is a collection of soafaces Bundles (SFBs). The individual bundles provide sample code for developers wanting to learn the different things you can do soafaces and also as a repository for soafaces components that developers can contribute to. You can download the collections of sample SFB components found in [Downloads BeanSoup here].
+Welcome to the !BeanSoup sub project within soafaces. !BeanSoup is a collection of soafaces Bundles (SFBs). The individual bundles provide sample code for developers wanting to learn the different things you can do soafaces and also as a repository for soafaces components that developers can contribute to. You can download the collection of sample SFB components found in [Downloads BeanSoup here].
