Edited wiki page HowToCreateTasklet through web user interface.

--- a/wiki/HowToCreateTasklet.wiki
+++ b/wiki/HowToCreateTasklet.wiki
@@ -26,8 +26,7 @@ public class HelloWorld implements Tasklet
   }
 
   /**
-   * The outBean is null in this example because there is no
-   * output JavaBean defined.
+   * Initialize your Tasklet.
    *  
    */
   public void onExecute(SOATaskInputContext inputContext, SOATaskOutputContext outputContext)
@@ -35,6 +34,10 @@ public class HelloWorld implements Tasklet
     //If your Tasklet uses an input and/or output JavaBean then it is 
     //best to get them and cast to the appropriate class type.
     HelloWorldInput inputBean = (HelloWorldInput) inputContext.getInputBean();
+
+    /* Note, the outBean variable is not set here because there is no */
+    /* output JavaBean defined in this example.                       */
+    //HelloWorldOutput outBean = (HelloWorldOutput) inputContext.getOutputBean();
 
     /**
      * Create and name a logger in order to log all messages. The name
