--- a/wiki/HowToCreateTasklet.wiki
+++ b/wiki/HowToCreateTasklet.wiki
@@ -223,16 +223,17 @@ SOAFaces-Description: Simple Tasklet with an input JavaBean and MFace Customizer
 SOAFaces-Vendor: Grand Logic, Inc
 SOAFaces-Category: example
 
-#Tasklet runs on the server-side when java/task is run
+#Tasklet runs on the server-side when this java interface is executed.
 SOAFaces-Tasklet: org.beansoup.helloworld3.workflow.HelloWorld
 
-#Optional input JavaBean used by the Weblet and Tasklet
+#Optional input JavaBean used by the Weblet and Tasklet.
 SOAFaces-InputBean: org.beansoup.helloworld3.client.HelloWorldInput
 
-#Optional output JavaBean used by the Weblet and Tasklet
+#Optional output JavaBean used by the Weblet and Tasklet.
 SOAFaces-OutputBean: org.beansoup.helloworld3.client.HelloWorldOutput
 
-#GWT Weblet client Module package name. Creating a Weblet is optional.
+#Optional GWT Weblet client Module package name. 
+#Creating a Weblet UI for a Tasklet is optional.
 SOAFaces-Weblet: org.beansoup.helloworld3.Bundle
 }}}
 
