--- a/wiki/HowToCreateTasklet.wiki
+++ b/wiki/HowToCreateTasklet.wiki
@@ -232,8 +232,8 @@ SOAFaces-InputBean: org.beansoup.helloworld3.client.HelloWorldInput
 #Optional output JavaBean used by the Weblet and Tasklet.
 SOAFaces-OutputBean: org.beansoup.helloworld3.client.HelloWorldOutput
 
-#Optional GWT Weblet client Module package name. 
-#Creating a Weblet UI for a Tasklet is optional.
+#Optional GWT Weblet client module package name. 
+#Defines the optional GWT Weblet interface for this Tasklet.
 SOAFaces-Weblet: org.beansoup.helloworld3.Bundle
 }}}
 
