Edited wiki page HowToCreateTasklet through web user interface.

--- a/wiki/HowToCreateTasklet.wiki
+++ b/wiki/HowToCreateTasklet.wiki
@@ -233,7 +233,7 @@ SOAFaces-InputBean: org.beansoup.helloworld3.client.HelloWorldInput
 SOAFaces-OutputBean: org.beansoup.helloworld3.client.HelloWorldOutput
 
 #Optional GWT Weblet client module package name (Bundle.gwt.xml GWT module name).
-#The gwt.xml file defines the GWT Weblet UI used for this Tasklet.
+#The Bundle.gwt.xml file defines the GWT Weblet UI used for this Tasklet.
 SOAFaces-Weblet: org.beansoup.helloworld3.Bundle
 }}}
 
