Edited wiki page CreateSoaFacesBundle through web user interface.

--- a/wiki/CreateSoaFacesBundle.wiki
+++ b/wiki/CreateSoaFacesBundle.wiki
@@ -3,5 +3,5 @@
 A Bundle (soafaces Bundle) is a simple JAR that contains the classes and resources needed to execute your soafaces Application or Task/Job. Bundles are very powerful and flexible. You can develop a Bundle to serve as an Application that will implement a GUI Application or as a Tasklet that will be part of a Job. In either case the process of developing, packaging, and deploying is very similar. 
 
 Let's walk through the process of creating a very simple Bundle. We will show you how to create the two kinds of Bundles:
-  # [HowToCreateTasklet Server-side Tasklet oriented Bundle (used to build batch jobs and workflows)]
-  # [HowToCreateApplication Application oriented Bundle (used to build web services powered GUI applications)]
+  # [HowToCreateTasklet Server-side Tasklet oriented Bundle] (used to build batch jobs and workflows)
+  # [HowToCreateApplication Application oriented Bundle] (used to build web services powered GUI applications)
