--- a/wiki/CreateSoaFacesBundle.wiki
+++ b/wiki/CreateSoaFacesBundle.wiki
@@ -1,6 +1,6 @@
 #summary How to create a Bundle (soafaces Bundle)
 
-A Bundle (soafaces Bundle) is a simple JAR file that contains the classes and resources needed to execute your soafaces Application or Task/Job. Bundles are very powerful and flexible software components. You can develop a Bundle to serve as an Application that will implement a GUI Application or as a Tasklet that will be part of a server-side job. In either case the steps for developing, packaging, and deploying types of components (aka Bundles) are very similar. 
+A Bundle (soafaces Bundle) is a simple JAR file that contains the classes and resources needed to execute your soafaces Application or Task/Job. Bundles are very powerful and flexible software components. You can develop a Bundle to serve as an Application that will implement a web GUI type application or as a Tasklet that will be part of a server-side job process. In either case the steps for developing, packaging, and deploying types of components (aka Bundles) are very similar. 
 
 Let's walk through the process of creating a very simple Bundle components. We will show you how to create the two kinds of Bundles:
   # [HowToCreateTasklet Server-side Tasklet oriented Bundle] (used to build batch jobs and workflows)
