Edited wiki page UniversalClientExample through web user interface.

--- a/wiki/UniversalClientExample.wiki
+++ b/wiki/UniversalClientExample.wiki
@@ -1,6 +1,6 @@
 #summary Example of how to use UniversalClient from a GWT application
 
-= Using UniversalClient in Gwt App =
+= Using UniversalClient in GWT App =
 
 Here is an code example of what a simple GWT client would look like that uses the UniversalClient API to invoke a very simple service on the server side. This is of course a simple example but you can also use the UniversalClient to invoke Mule endpoints as well.
 
