--- a/wiki/UniversalClientExample.wiki
+++ b/wiki/UniversalClientExample.wiki
@@ -50,7 +50,7 @@ public class UCDemo implements EntryPoint {
 
           //Simply use the UniversalClient send method to call remote service
           //This service endpoint takes 2 arguments and returns a String
-          getUniversalClient().send(stEndpoint1, oMuleJSONCallback);
+          getUniversalClient().send(stEndpoint1, myArgs, oMuleJSONCallback);
         }
       }
     });
