--- a/wiki/UniversalClientExample.wiki
+++ b/wiki/UniversalClientExample.wiki
@@ -65,7 +65,7 @@ public class UCDemo implements EntryPoint {
 }
 }}}
 
-Here is what the server side code looks like. The annotation name `helloThereEndpoint` is the service endpoint referenced by the client code above. As you can see very simple. Just a POJO with an annotation marker. This allows the !UnviversalClient above to invoke this service and return the results of the invoked method.
+Here is what the server side code looks like. The annotation name `helloThereEndpoint` is the service endpoint referenced by the client code above. As you can see, the server-side code is very simple to setup. You just create a POJO with an annotation marker. This allows the !UnviversalClient code above to invoke this service and return the results of the method.
 
 {{{
 package com.acme;
