--- a/wiki/MuleEndpoints.wiki
+++ b/wiki/MuleEndpoints.wiki
@@ -1,4 +1,4 @@
-#summary How to invoke a Mule service endpoint from UniversalClient
+#summary How to invoke a Mule services from the soafaces UniversalClient interface
 
 = Introduction =
 
