--- a/wiki/UniversalClientExample.wiki
+++ b/wiki/UniversalClientExample.wiki
@@ -59,7 +59,9 @@ public class UCDemo implements EntryPoint {
   //Tip: If you want to a UniversalClient object created and you are calling
   //it from the Weblet interface then you can use the WebletContext
   //interface. This creates a UniveralClient with the URL alerady
-  //defined in your soafaces container.
+  //defined in your soafaces container. If you are creating a UniveralClient
+  //from your own GWT client then you need to define the URL of the
+  //UniversalClient servlet as shown below.
   private UniversalClient getUniversalClient() {
     if(_oClient == null) {
       _oClient = UniversalClientFactory.getInstance().getUniversalClient(UNIVERSAL_CLIENT_SERVLET_URL);
