--- a/wiki/MuleEndpoints.wiki
+++ b/wiki/MuleEndpoints.wiki
@@ -1,8 +1,10 @@
 #summary How to invoke Mule services from the soafaces UniversalClient interface
 
 = Introduction =
-Invoking Mule service from the UniversalClient interface is similar to using the native MuleClient API found in the Mule API.
+Invoking Mule services from the UniversalClient interface is similar to using the native MuleClient API found in the Mule API.
 
-To invoke a Mule service use the UniversalClient interface and reference the Mule endpoints like you would using the native !MuleClient API.
+To invoke a Mule service, use the UniversalClient interface and reference the Mule endpoints URI like you would using the native !MuleClient API.
 
 For example you can use endpoints such as `vm://myMuleService` or `jms://myJmsServer` ....etc.
+
+Follow the example in UniversalClientExample to invoke Mule service from your GWT client.
