--- a/wiki/UniversalClientWebletExample.wiki
+++ b/wiki/UniversalClientWebletExample.wiki
@@ -1,6 +1,6 @@
 #summary Example of how to use UniversalClient from the Weblet Interface
 
-= Using UniversalClient in GWT App =
+= Using UniversalClient in Weblet GWT Client=
 
 Here is an code example of what a simple soafaces Weblet client would look like that uses the UniversalClient API to invoke a very simple service on the server-side. This is of course a simple example, but you can also use the UniversalClient to [MuleEndpoints invoke Mule endpoints] as well.
 
