--- a/wiki/UniversalClientWebletExample.wiki
+++ b/wiki/UniversalClientWebletExample.wiki
@@ -2,7 +2,7 @@
 
 = Using UniversalClient in Weblet GWT Client=
 
-Here is an code example of what a simple soafaces Weblet client would look like that uses the UniversalClient API to invoke a very simple service on the server-side. This is of course a simple example, but you can also use the UniversalClient to [MuleEndpoints invoke Mule endpoints] as well.
+Here is a code example of what a simple soafaces Weblet client would look like that uses the UniversalClient API to invoke a very simple service on the server-side. This is of course a simple example, but you can also use the UniversalClient to [MuleEndpoints invoke Mule endpoints] as well.
 
 {{{
 public class MyWEblet extends SimplerPOGJOWEblet {
