--- a/wiki/UniversalClientExample.wiki
+++ b/wiki/UniversalClientExample.wiki
@@ -1,4 +1,4 @@
-#summary Example of how to use UniversalClient from a GWT application
+#summary Example of how to use UniversalClient from a Generic GWT application
 
 = Using UniversalClient in GWT App =
 
