--- a/wiki/UniversalClientExample.wiki
+++ b/wiki/UniversalClientExample.wiki
@@ -1,6 +1,6 @@
 #summary Example of how to use UniversalClient from a Generic GWT application
 
-= Using UniversalClient in GWT App =
+= Using UniversalClient in a Generic GWT App =
 
 Here is a code example of what a simple GWT client would look like that uses the UniversalClient API to invoke a very simple service on the server-side. This is of course a simple example, but you can also use the UniversalClient to [MuleEndpoints invoke Mule endpoints] as well.
 
