Edited wiki page UniversalClientWebletExample through web user interface.

--- a/wiki/UniversalClientWebletExample.wiki
+++ b/wiki/UniversalClientWebletExample.wiki
@@ -1,4 +1,4 @@
-#summary Example of how to use UniversalClient from the Weblet Interface
+#summary Example of how to use the UniversalClient API from within a soafaces Weblet based app
 
 = Using UniversalClient in Weblet GWT Client=
 
