--- a/wiki/UniversalClient.wiki
+++ b/wiki/UniversalClient.wiki
@@ -1,4 +1,4 @@
-#summary Interface that allows you to invoke remote services from GWT client with RPC
+#summary Interface and API that allows you to invoke remote services from GWT client with RPC
 
 = Introduction =
 
