--- a/wiki/HowToCreateTasklet.wiki
+++ b/wiki/HowToCreateTasklet.wiki
@@ -10,7 +10,7 @@ Follow these steps to learn how to develop, package and deploy your own soafaces
   # Define an Input !JavaBean for Tasklet (Optional)
   # Define an Output !JavaBean for Tasklet (Optional)
   # Create `MANIFEST.MF` file
-  # Package Contents into a Bundle JAR file
+  # Package contents into a Bundle JAR file
   # Deploy the new Bundle to a soafaces Container (such as !JobServer)
 
 ===Step 1: Implement Tasklet Interface===
