--- a/wiki/Downloads.wiki
+++ b/wiki/Downloads.wiki
@@ -7,11 +7,11 @@ September 7, 2014 - [http://www.grandlogic.com/downloads_content/soafaces_downlo
 
 || *Download Package* || *Description* ||
 || [http://www.grandlogic.com/downloads_content/soafaces_downloads/soafaces-jars-2.6.18.zip soafaces-jars-2.6.18.zip] || soafaces binary JARs ||
-|| [http://soafaces.googlecode.com/files/soafaces-src-2.6.18.zip soafaces-src-2.6.18.zip] || soafaces source ||
-|| [http://soafaces.googlecode.com/files/soafaces-javadocs-2.6.18.zip soafaces-javadocs-2.6.18.zip] || soafaces soafaces Javadocs ||
-|| [http://soafaces.googlecode.com/files/beansoup-sfb-2.6.18.zip beansoup-sfb-2.6.18.zip] || Beansoup compiled sample Bundle components. Unzip and use Bundles in your soafaces Container ||
-|| [http://soafaces.googlecode.com/files/beansoup-sfb-src-2.6.18.zip beansoup-sfb-src-2.6.18.zip] || Beansoup sample Bundle source code. Sample Bundle components ||
-|| [http://soafaces.googlecode.com/files/universalapp-example-war-2.6.10.zip universalapp-example-war-2.6.18.zip] || Example using !UniversalClient API in a GWT web application to access remote services with no RPC! WAR file includes the sample source code for both GWT client and backend services. ||
+|| [http://www.grandlogic.com/downloads_content/soafaces_downloads/soafaces-src-2.6.18.zip soafaces-src-2.6.18.zip] || soafaces source ||
+|| [http://www.grandlogic.com/downloads_content/soafaces_downloads/soafaces-javadocs-2.6.18.zip soafaces-javadocs-2.6.18.zip] || soafaces soafaces Javadocs ||
+|| [http://www.grandlogic.com/downloads_content/soafaces_downloads/beansoup-sfb-2.6.18.zip beansoup-sfb-2.6.18.zip] || Beansoup compiled sample Bundle components. Unzip and use Bundles in your soafaces Container ||
+|| [http://www.grandlogic.com/downloads_content/soafaces_downloads/beansoup-sfb-src-2.6.18.zip beansoup-sfb-src-2.6.18.zip] || Beansoup sample Bundle source code. Sample Bundle components ||
+|| [http://www.grandlogic.com/downloads_content/soafaces_downloads/universalapp-example-war-2.6.10.zip universalapp-example-war-2.6.18.zip] || Example using !UniversalClient API in a GWT web application to access remote services with no RPC! WAR file includes the sample source code for both GWT client and backend services. ||
 
 == Version 2.6.10 ==
 March 23, 2012 - [http://soafaces.googlecode.com/files/release_notes-2.6.10.html Release Notes]
