Edited wiki page NewsEvents through web user interface.

--- a/wiki/NewsEvents.wiki
+++ b/wiki/NewsEvents.wiki
@@ -3,7 +3,7 @@
 ==Status and News===
   * *09/07/2014 - Release 2.6.18*
     * _Minor API changes_
-    * _Support for DOCTYPE HTML_
+    * _Support for DOCTYPE HTML in Tasklet/Weblet UIs_
     * _UI layout improvements for several Tasklet Bundles_
     * _Shell Script Tasklet minor reporting and notification enhancements_
   * *03/23/2012 - Release 2.6.10*
