--- a/wiki/Downloads.wiki
+++ b/wiki/Downloads.wiki
@@ -2,6 +2,17 @@
 
 = SOAFaces Release Download Archives =
 
+== Version 2.6.20 ==
+October 28, 2014 - [http://www.grandlogic.com/downloads_content/soafaces_downloads/release_notes-2.6.20.html Release Notes]
+
+|| *Download Package* || *Description* ||
+|| [http://www.grandlogic.com/downloads_content/soafaces_downloads/soafaces-jars-2.6.20.zip soafaces-jars-2.6.20.zip] || soafaces binary JARs ||
+|| [http://www.grandlogic.com/downloads_content/soafaces_downloads/soafaces-src-2.6.20.zip soafaces-src-2.6.20.zip] || soafaces source ||
+|| [http://www.grandlogic.com/downloads_content/soafaces_downloads/soafaces-javadocs-2.6.20.zip soafaces-javadocs-2.6.20.zip] || soafaces soafaces Javadocs ||
+|| [http://www.grandlogic.com/downloads_content/soafaces_downloads/beansoup-sfb-2.6.20.zip beansoup-sfb-2.6.20.zip] || Beansoup compiled sample Bundle components. Unzip and use Bundles in your soafaces Container ||
+|| [http://www.grandlogic.com/downloads_content/soafaces_downloads/beansoup-sfb-src-2.6.20.zip beansoup-sfb-src-2.6.20.zip] || Beansoup sample Bundle source code. Sample Bundle components ||
+|| [http://www.grandlogic.com/downloads_content/soafaces_downloads/universalapp-example-war-2.6.20.zip universalapp-example-war-2.6.20.zip] || Example using !UniversalClient API in a GWT web application to access remote services with no RPC! WAR file includes the sample source code for both GWT client and backend services. ||
+
 == Version 2.6.18 ==
 September 7, 2014 - [http://www.grandlogic.com/downloads_content/soafaces_downloads/release_notes-2.6.18.html Release Notes]
 
